samples/_failures_safe/1761216089_1840d5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_88779a51.c: In function ‘main’:
./samples/SAFE/__tmp_88779a51.c:164:13: error: expected identifier at end of input
  164 |             printf(" ('%s')", tokens[i].
      |             ^~~~~~
./samples/SAFE/__tmp_88779a51.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_88779a51.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_88779a51.c:164:13: error: expected declaration or statement at end of input
